--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@ may need to scroll very far.
     <link rel="stylesheet" href="../static/styles.css">
 </head>
 <header>
-    <h1>Personalized Video Game Recommender</h1>
+    <h1>Personal Video Game Recommender</h1>
 </header>
 <body>
 {% block content %}{% endblock %}
